# brainglobe-data-api-connectivity

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: docs_build_and_deploy.yml
brainglobe_data_api_connectivity/: __init__.py  _types.py  connections.py
brainglobe_data_api_connectivity/connections/: __init__.py  connections.py  node_contractions.py  query_opts.py
brainglobe_data_api_connectivity/dijkstra/: __init__.py  dijkstra.py  dijkstra_alg.py  dijkstra_search.py
brainglobe_data_api_connectivity/dijkstra/strategy/: __init__.py  _base.py  fewest_steps.py  lowest_cost.py  shortest_distance.py  weakest_path.py  weakest_total_weight.py  widest_path.py
brainglobe_data_api_connectivity/io/: __init__.py  excel.py  validate_input.py
brainglobe_data_api_connectivity/preprocess/: validate_data.py
brainglobe_data_api_connectivity/utils/: __init__.py  convert.py  tidy.py
docs/examples/: example.py
docs/source/: api_index.rst  conf.py  connectivity-data.md  connectivity-math.md  index.md  index.rst  neuro_to_math.md  sg_execution_times.rst
docs/source/examples/: GALLERY_HEADER.rst  example.py
scripts/: swanson_datasets_to_csvs.py
tests/: conftest.py
tests/data/: small-edge-meta.csv  small-edge-table.csv  small-edges.csv  small-nodes.csv
tests/fixtures/: general.py  readers.py  tmp_csv.py
tests/test_unit/: test_connections.py  test_convert.py  test_excel.py  test_scripts.py  test_tidy.py  test_validate_data.py  test_validate_input.py
tests/test_unit/test_connections/: test_collapse_nodes.py  test_connections_construction.py  test_connections_edge_info_lookup.py  test_connections_node_index_lookup.py  test_contract_nodes.py  test_direct_connections.py  test_node_contraction_fns.py  test_setup_network_nodes.py
tests/test_unit/test_dijkstra/: test_dijkstra.py
