[project]
name = "brainglobe-data-api-connectivity"
authors = [{name = "BrainGlobe devs", email= "hello@brainglobe.info"}]
description = "A simple Python package"
readme = "README.md"
requires-python = ">=3.11.0"
dynamic = ["version"]

dependencies = [
    "polars",
    "rustworkx",
]

license = "BSD-3-Clause"

license-files = ["LICENSE"]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/brainglobe/brainglobe-data-api-connectivity"
"Bug Tracker" = "https://github.com/brainglobe/brainglobe-data-api-connectivity/issues"
"Documentation" = "https://brainglobe.github.io/brainglobe-data-api-connectivity"

"Source Code" = "https://github.com/brainglobe/brainglobe-data-api-connectivity"
"User Support" = "https://github.com/brainglobe/brainglobe-data-api-connectivity/issues"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "coverage",
  "tox",
  "mypy",
  "pre-commit",
  "ruff",
  "setuptools-scm",
]
docs = [
  "pydata-sphinx-theme",
  "sphinx",
  "sphinx_autodoc_typehints",
  "sphinx_sitemap",
  "myst_parser[linkify]",
]

[build-system]
requires = [
    "setuptools>=77",
    "wheel",
    "setuptools-scm[toml]>=8",
]
build-backend = "setuptools.build_meta"

[tool.mypy]
exclude = ["tests/"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["brainglobe_data_api_connectivity*"]
exclude = ["tests", "docs*"]


[tool.pytest.ini_options]
addopts = "--cov=brainglobe_data_api_connectivity"
filterwarnings = [
    "error",
]

[tool.setuptools_scm]

[tool.check-manifest]
ignore = [
  ".yaml",
  "tox.ini",
  "tests/",
  "tests/test_unit/",
  "tests/test_integration/",
  "docs/",
  "docs/source/",
]


[tool.ruff]
line-length = 79
exclude = ["__init__.py", "build", ".eggs"]
lint.select = [
  "E",   # pycodestyle errors
  "F",   # Pyflakes
  "I",   # isort
  # You can see what all the rules do here: https://docs.astral.sh/ruff/rules/
  # Some additional ruff rules that might be useful (uncomment to enable)
  #"UP",  # pyupgrade
  #"B",   # flake8 bugbear
  #"SIM", # flake8 simplify
  #"C90", # McCabe complexity
]
fix = true

[tool.ruff.format]
docstring-code-format = true # Also format code in docstrings (e.g. examples)

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{311,312,313}
isolated_build = True

[gh-actions]
python =
    3.11: py311
    3.12: py312
    3.13: py313

[testenv]
passenv =
    CI
    GITHUB_ACTIONS
extras =
    dev
commands =
    pytest -v --color=yes --cov=brainglobe_data_api_connectivity --cov-report=xml
"""


[tool.codespell]
skip = '.git'
check-hidden = true
